# moblok

./: CMakeLists.txt  README.md  README_ES.md
data/img/: next_tetromino.xcf  pause_text.xcf
debian/: changelog  copyright  moblok.desktop
project/: moblok.pro
scripts/: build-deb.sh  config.in  rebuild-packages.sh  refine-deb.sh
share/moblok/img/: next_tetromino.xcf
source/include/: Game.hpp  Player.hpp  Tetris.hpp  Tetromino.hpp  config.hpp  config.hpp.in  game.hpp  game_loop.hpp  matrix.hpp  player.hpp  resource_loader.hpp  tetris.hpp  tetromino.hpp
source/src/: Game.cpp  Matrix.cpp  Player.cpp  Tetris.cpp  game.cpp  game_loop.cpp  main.cpp  matrix.cpp  player.cpp  resource_loader.cpp  tetris.cpp  tetromino.cpp
src/: Game.cpp  Game.hpp  Matrix.cpp  Matrix.hpp  Player.cpp  Player.hpp  Tetris.cpp  Tetris.hpp  Tetromino.cpp  Tetromino.hpp  main.cpp
